WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281285
WebCoreDecompressionSession: ASSERTION FAILED: m_promise
https://bugs.webkit.org/show_bug.cgi?id=281285
Summary
WebCoreDecompressionSession: ASSERTION FAILED: m_promise
Jean-Yves Avenard [:jya]
Reported
2024-10-11 00:32:45 PDT
``` stderr: 2024-10-10 22:51:28.156 WebKitTestRunner[71375:4615436] +[IMKClient subclass]: chose IMKClient_Modern IOSurfaceClientSetSurfaceNotify failed e00002e2 IOSurfaceClientSetSurfaceNotify failed e00002e2 ASSERTION FAILED: m_promise /Users/jyavenard/Work/webkit/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/NativePromise.h(1369) : bool WTF::NativePromiseProducer<WTF::RetainPtr<opaqueCMSampleBuffer *>, int>::isNothing() const [ResolveValueT = WTF::RetainPtr<opaqueCMSampleBuffer *>, RejectValueT = int, options = 0] 1 0x302c5e598 WTF::NativePromiseProducer<WTF::RetainPtr<opaqueCMSampleBuffer*>, int, 0u>::isNothing() const 2 0x302c5e3e0 void WTF::NativePromiseProducer<WTF::RetainPtr<opaqueCMSampleBuffer*>, int, 0u>::resolve<WTF::RetainPtr<opaqueCMSampleBuffer*>, std::__1::enable_if<true, void>>(WTF::RetainPtr<opaqueCMSampleBuffer*>&&, WTF::Logger::LogSiteIdentifier const&) const 3 0x302c66930 WebCore::WebCoreDecompressionSession::decodeSample(opaqueCMSampleBuffer*, bool)::$_3::operator()(int, unsigned int, __CVBuffer*, CMTime, CMTime)::'lambda'()::operator()() const 4 0x302c66638 WTF::Detail::CallableWrapper<WebCore::WebCoreDecompressionSession::decodeSample(opaqueCMSampleBuffer*, bool)::$_3::operator()(int, unsigned int, __CVBuffer*, CMTime, CMTime)::'lambda'(), void>::call() 5 0x12c7b520c WTF::Function<void ()>::operator()() const 6 0x12c981fbc WTF::(anonymous namespace)::DispatchWorkItem::operator()() 7 0x12c980ce4 void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(void*) 8 0x189498658 _dispatch_client_callout 9 0x18949fc60 _dispatch_lane_serial_drain 10 0x1894a0768 _dispatch_lane_invoke 11 0x1894ab7e8 _dispatch_root_queue_drain_deferred_wlh 12 0x1894ab034 _dispatch_workloop_worker_thread 13 0x1896473a0 _pthread_wqthread 14 0x1896460b8 start_wqthread com.apple.WebKit.GPU.Development terminated (pid 71377) for reason: crash LEAK: 1 WebPageProxy ``` this occurs because VTDecompressionSessionDecodeFrameWithOutputHandler can call the output handler several times when decoding VP8.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-11 00:33:00 PDT
<
rdar://problem/137735570
>
Jean-Yves Avenard [:jya]
Comment 2
2024-10-11 02:09:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35030
EWS
Comment 3
2024-10-11 07:16:28 PDT
Committed
285016@main
(125f2aee6007): <
https://commits.webkit.org/285016@main
> Reviewed commits have been landed. Closing PR #35030 and removing active labels.
EWS
Comment 4
2024-10-15 17:25:44 PDT
Committed
283286.285@safari-7620-branch
(3c1034431a02): <
https://commits.webkit.org/283286.285@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2028 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug