WebCoreDecompressionSession: ASSERTION FAILED: m_promise https://bugs.webkit.org/show_bug.cgi?id=281285 rdar://137735570

Reviewed by Youenn Fablet.

When decoding VP8 through the WebCoreDecompressionSession, the output callback may
get called more than once.
As a temporary measure, we ignore following calls so that the NativePromise producer is only ever resolved once.

Test will be added in webkit.org/b/281106.

* Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.mm:
(WebCore::WebCoreDecompressionSession::decodeSample):

Canonical link: https://commits.webkit.org/285016@main